--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   widget_mask: ^1.0.0
   webview_flutter: ^3.0.1
   grouped_list: ^4.2.0
+  http: ^0.13.4
 
 # Run commands in your terminal to generate splash screen
 # 1) flutter clean
