--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   webview_flutter: ^3.0.1
   grouped_list: ^4.2.0
   http: ^0.13.4
+  liquid_swipe: ^2.1.1
 
 # Run commands in your terminal to generate splash screen
 # 1) flutter clean
