--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   liquid_swipe: ^2.1.1
   flutter_platform_widgets: ^1.20.0
   youtube_player_flutter: ^8.1.0
+  translator: ^0.1.7
+  html_unescape: ^2.0.0
+
 
 # Run commands in your terminal to generate splash screen
 # 1) flutter clean
