--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,7 +56,11 @@ dependencies:
   youtube_player_flutter: ^8.1.0
   translator: ^0.1.7
   html_unescape: ^2.0.0
-
+  sticky_headers: ^0.3.0+2
+  flutter_inset_box_shadow: ^1.0.8
+  gallery_saver: ^2.3.2
+  dio: ^4.0.6
+  path_provider: ^2.0.10
 
 # Run commands in your terminal to generate splash screen
 # 1) flutter clean
