--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   gallery_saver: ^2.3.2
   dio: ^4.0.6
   path_provider: ^2.0.10
+  flutter_sound: ^9.1.9
+  permission_handler: ^9.2.0
+  audioplayers: ^1.0.1
 
 # Run commands in your terminal to generate splash screen
 # 1) flutter clean
